# ESP32-Autonomous-Sentinel

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  QUICKREF.md  README.md  SETUP.md  partitions2.csv
components/detect/: CMakeLists.txt  Kconfig  README.md  detect.cpp  detect.hpp  idf_component.yml
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
main/config/: app_config.hpp  board_config.hpp  credentials.hpp.template
main/detection/: detector.cpp  detector.hpp
main/drivers/: camera_driver.cpp  camera_driver.hpp  sdcard_driver.cpp  sdcard_driver.hpp
main/network/: telegram_client.cpp  telegram_client.hpp  wifi_manager.cpp  wifi_manager.hpp
main/power/: sleep_manager.cpp  sleep_manager.hpp
